--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -11,7 +11,7 @@
 }
 html {
   font-family: system-ui, sans-serif;
-  background: linear-gradient(135deg, #00BFFF, #40E0D0, #FFE066);
+  background: linear-gradient(135deg, #00bfff, #40e0d0, #ffe066);
 }
 code {
   font-family: Menlo, Monaco, Lucida Console, Liberation Mono, DejaVu Sans Mono,
@@ -25,5 +25,5 @@ code {
   transition: 300ms opacity;
   transform: translate3d(0, 0, 0);
   z-index: 2;
-  top:97%;
+  top: 97%;
 }
