feat: minor changes

--- a/src/pages/500.astro
+++ b/src/pages/500.astro
@@ -7,7 +7,7 @@ import Layout from "../layouts/Layout.astro";
   <main>
     <h2 class="text-center mt-20 presentation">Ha habido un error...</h2>
     <div class="mt-20 flex justify-center max-w-[300px] mx-auto">
-      <img src="./shark.png" alt="Imagen tiburón" />
+      <img src="/shark.png" alt="Imagen tiburón" />
     </div>
   </main>
 </Layout>
