feat: add configuration

--- a/src/pages/404.astro
+++ b/src/pages/404.astro
@@ -1,9 +1,10 @@
 ---
 import Layout from "../layouts/Layout.astro";
 
+export const prerender = true
 ---
 
-<Layout title="Verano 2024">
+<Layout title="404 Página no encontrada">
   <main>
     <h2 class="text-center mt-20 presentation">La página no existe</h2>
     <div class="mt-20 flex justify-center max-w-[300px] mx-auto">
