--- a/src/pages/login/index.astro
+++ b/src/pages/login/index.astro
@@ -2,7 +2,7 @@
 import Layout from "../../layouts/Layout.astro";
 ---
 
-<Layout title="Login">
+<Layout title="Login | Verano 2024">
   <main>
     <div class="flex logo:justify-center">
       <img class="logo:max-w-[350px]" src="./logo.png" alt="Verano 2024" />
