--- a/src/pages/500.astro
+++ b/src/pages/500.astro
@@ -3,7 +3,7 @@ import Layout from "../layouts/Layout.astro";
 
 ---
 
-<Layout title="Verano 2024">
+<Layout title="500 Error en el servidor">
   <main>
     <h2 class="text-center mt-20 presentation">Ha habido un error...</h2>
     <div class="mt-20 flex justify-center max-w-[300px] mx-auto">
