--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -10,7 +10,7 @@ const user = {
   id: (Astro.locals as Locals).userId,
 };
 
-const eventsRes = await fetch("http://localhost:3030/api/summer/cargar-eventos");
+const eventsRes = await fetch("/api/events", { method: "GET" });
 const events = await eventsRes.json();
 
 const tempRes = await fetch(
